# sideways

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  metrics.rs  prelude.rs  tracing.rs
