[package]
name = "sideways"
version = "0.1.2"
edition = "2024"
authors = ["iClassPro", "Jeremiah Fulbright"]
description = "Observability from the side - Datadog tracing and StatsD metrics for Rust services"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/iclassproinc/sideways"
homepage = "https://github.com/iclassproinc/sideways"
documentation = "https://docs.rs/sideways"
readme = "README.md"
keywords = ["observability", "telemetry", "datadog", "statsd", "metrics"]
categories = ["development-tools::profiling", "development-tools::debugging"]
rust-version = "1.85"

[dependencies]
# Tracing foundation
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32.1"

# Datadog native tracing
datadog-opentelemetry = { version = "0.3.0" }
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"

# Metrics
cadence = "1.7.0"
cadence-macros = "1.7.0"

# Error handling
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
name = "sideways"
path = "src/lib.rs"
